Comment add-exports transformation